--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -7,7 +7,8 @@
   .post.post_bg-image-style
     .post-header
       .post-cover
-        .post-cover-inner style="background-image: url('/images/post-header-image.jpg')"
+        .post-cover-image.lazyload data-bg="/images/post-header-image.jpg"
+        .post-cover-inner
           ul.post-category
             li: a href="/categories/show.html" 故事
             // 若出現兩者以上議題的架構
