--- a/sass/partial/_post.scss
+++ b/sass/partial/_post.scss
@@ -220,20 +220,24 @@
 
 .post_bg-image-style {
   .post-cover {
+    margin: 0 0 rhythm(0.5);
+    position: relative;
     background-color: #50B584;
     @include background-image(linear-gradient(140deg, #E7E879  0%, #50B584  87%));
   }
-  .post-cover-inner {
-    position: relative;
-    z-index: 0;
-    padding: 40% 24px 24px;
+  .post-cover-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-position: center center;
     @include background-size(cover);
+    @extend .lazyload;
     &:before {
       content: '';
       display: block;
       position: absolute;
-      z-index: -1;
       top: 0;
       right: 0;
       bottom: 0;
@@ -243,6 +247,12 @@
       background-position: center bottom;
       @include background-size(cover);
     }
+  }
+  .post-cover-inner {
+    position: relative;
+    padding: 40% 24px 24px;
+    background-position: center center;
+    @include background-size(cover);
   }
   .post-category {
     a {
@@ -263,6 +273,7 @@
     }
     .post-cover {
       padding: 0;
+      margin: 0 auto rhythm(1);
     }
     .post-cover-inner {
       padding: 28% 20% 48px;
