--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -442,8 +442,8 @@ body { background-color: #183840; position: relative; }
 .banner img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: block; margin: 0 auto; }
 @media (min-width: 640px) { .banner { padding-top: 24%; } }
 
-.lazyload, .banner img, .post-list .post-image-inner { opacity: 0; -webkit-transition: opacity 2s; -moz-transition: opacity 2s; -o-transition: opacity 2s; transition: opacity 2s; }
-.lazyload.lazyloaded, .banner img.lazyloaded, .post-list .lazyloaded.post-image-inner { opacity: 1; }
+.lazyload, .banner img, .post-list .post-image-inner, .post_bg-image-style .post-cover-image { opacity: 0; -webkit-transition: opacity 2s; -moz-transition: opacity 2s; -o-transition: opacity 2s; transition: opacity 2s; }
+.lazyload.lazyloaded, .banner img.lazyloaded, .post-list .lazyloaded.post-image-inner, .post_bg-image-style .lazyloaded.post-cover-image { opacity: 1; }
 
 .header .header-inner { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; padding: 0 24px; background-color: white; border-bottom: 1px solid #ddd; }
 .header .header-inner:after { content: ""; display: table; clear: both; }
@@ -808,14 +808,15 @@ body { background-color: #183840; position: relative; }
   .post .post-share { margin-top: 48px; }
   .post .post-share-title { font-size: 16px; line-height: 24px; } }
 
-.post_bg-image-style .post-cover { background-color: #50B584; background-image: -webkit-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -moz-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -o-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: linear-gradient(140deg, #e7e879 0%, #50b584 87%); }
-.post_bg-image-style .post-cover-inner { position: relative; z-index: 0; padding: 40% 24px 24px; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-.post_bg-image-style .post-cover-inner:before { content: ''; display: block; position: absolute; z-index: -1; top: 0; right: 0; bottom: 0; left: 0; background-image: url("/images/blur-ball-post-header.png"); background-repeat: no-repeat; background-position: center bottom; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.post_bg-image-style .post-cover { margin: 0 0 12px; position: relative; background-color: #50B584; background-image: -webkit-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -moz-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -o-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: linear-gradient(140deg, #e7e879 0%, #50b584 87%); }
+.post_bg-image-style .post-cover-image { position: absolute; top: 0; right: 0; bottom: 0; left: 0; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.post_bg-image-style .post-cover-image:before { content: ''; display: block; position: absolute; top: 0; right: 0; bottom: 0; left: 0; background-image: url("/images/blur-ball-post-header.png"); background-repeat: no-repeat; background-position: center bottom; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.post_bg-image-style .post-cover-inner { position: relative; padding: 40% 24px 24px; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 .post_bg-image-style .post-category a { color: #FEFF86; }
 .post_bg-image-style .post-title { color: white; }
 .post_bg-image-style .post-subtitle { color: white; }
 @media (min-width: 640px) { .post_bg-image-style .post-header { padding-top: 0px; }
-  .post_bg-image-style .post-cover { padding: 0; }
+  .post_bg-image-style .post-cover { padding: 0; margin: 0 auto 24px; }
   .post_bg-image-style .post-cover-inner { padding: 28% 20% 48px; }
   .post_bg-image-style .post-title { margin: 6px 0 0; } }
 @media (min-width: 640px) and (max-height: 640px) { .post_bg-image-style .post-cover-inner { padding-top: 240px; } }
