--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -482,10 +482,10 @@ body { background-color: #183840; position: relative; }
 .header .header-inner:after { content: ""; display: table; clear: both; }
 .header .logo { float: left; padding: 6px 0 6px 6px; }
 .header .logo a { display: block; }
-.header .logo_zh a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh-mobile.png?1450957647'); background-repeat: no-repeat; background-position: 50% 50%; width: 166px; height: 48px; background-image: none, url('/images/logo-zh-mobile.svg?1450957647'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
-.header .logo_en a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-en.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-en.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
-.header .logo_es a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-es.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-es.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
-.header .logo_jp a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-jp.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-jp.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.header .logo_zh a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh-mobile.png?1451033814'); background-repeat: no-repeat; background-position: 50% 50%; width: 166px; height: 48px; background-image: none, url('/images/logo-zh-mobile.svg?1451033814'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.header .logo_en a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-en-mobile.png?1451033814'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-en-mobile.svg?1451033814'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.header .logo_es a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-es-mobile.png?1451033815'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-es-mobile.svg?1451033815'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.header .logo_jp a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-jp-mobile.png?1451033815'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-jp-mobile.svg?1451033815'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .menu-btn { position: absolute; top: 14px; right: 10px; cursor: pointer; border: none; background-color: transparent; z-index: 250; color: #50b584; width: 32px; height: 32px; padding: 4px; margin: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .header .menu-btn:focus { outline: none; }
 .header .menu-btn-line { position: relative; width: 100%; height: 3px; background-color: #ccc; }
@@ -521,7 +521,10 @@ body { background-color: #183840; position: relative; }
 .header .global-language { position: absolute; top: 0px; height: 60px; right: 48px; display: block; }
 .header .global-language-btn { color: #ccc; display: block; font-size: 24px; line-height: 24px; position: relative; margin: 14px 0 0; padding: 0; top: 1px; width: 32px; height: 32px; }
 .header .global-language-btn .lang { display: none; }
-@media (min-width: 640px) { .header .logo_zh a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh.png?1450953046'); background-repeat: no-repeat; background-position: 50% 50%; width: 309px; height: 48px; background-image: none, url('/images/logo-zh.svg?1450953046'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; } }
+@media (min-width: 640px) { .header .logo_zh a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-zh.png?1451033814'); background-repeat: no-repeat; background-position: 50% 50%; width: 309px; height: 48px; background-image: none, url('/images/logo-zh.svg?1451033814'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+  .header .logo_en a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-en.png?1451036986'); background-repeat: no-repeat; background-position: 50% 50%; width: 311px; height: 48px; background-image: none, url('/images/logo-en.svg?1451036986'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+  .header .logo_es a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-es.png?1451036986'); background-repeat: no-repeat; background-position: 50% 50%; width: 308px; height: 48px; background-image: none, url('/images/logo-es.svg?1451036986'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+  .header .logo_jp a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-jp.png?1451036986'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-jp.svg?1451036987'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; } }
 @media (min-width: 1025px) { .header { position: fixed; left: 0; top: 0; right: 0; z-index: 350; margin: 0 auto; }
   .header .header-inner { position: relative; }
   .header .menu-btn { display: none; }
@@ -576,8 +579,8 @@ body { background-color: #183840; position: relative; }
 .hero .hero-block { overflow: hidden; position: relative; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 .hero .hero-block:before { content: ""; position: absolute; bottom: -120px; right: -120px; width: 290px; height: 290px; background: url("/images/blur-ball-small.png") no-repeat; opacity: .9; }
 .hero .hero-block.large { display: block; width: 100%; height: 400px; background-color: #dddddd; }
-.hero .hero-block.small { display: block; width: 100%; height: 200px; background-color: #dddddd; }
-.hero .hero-block.medium { display: block; width: 100%; height: 200px; background-color: #dddddd; }
+.hero .hero-block.small { display: block; width: 100%; height: 160px; background-color: #dddddd; }
+.hero .hero-block.medium { display: block; width: 100%; height: 160px; background-color: #dddddd; }
 .hero .hero-block-title { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: absolute; z-index: 15; bottom: 0; left: 0; width: 100%; padding: 12px; color: white; }
 .hero .hero-block-title .hero-block-title-inner { position: relative; z-index: 100; }
 .hero .hero-block-title:before { content: ""; position: absolute; z-index: 1; bottom: -330px; left: -200px; width: 520px; height: 520px; background: url("/images/blur-ball-large.png") no-repeat; opacity: .9; }
@@ -606,7 +609,7 @@ body { background-color: #183840; position: relative; }
   .hero .hero-block-title .description { z-index: 10; overflow: hidden; font-size: 15px; line-height: 24px; font-weight: bold; } }
 @media (min-width: 1025px) { .hero { max-width: 1512px; max-height: 900px; min-height: 480px; height: calc(100vh - 60px ); padding-top: 0; }
   .hero .hero-block-title { padding: 0; }
-  .hero .hero-block-title .hero-block-title-inner { padding: 24px; position: relative; z-index: 100; }
+  .hero .hero-block-title .hero-block-title-inner { padding: 18px 24px; position: relative; z-index: 100; }
   .hero .hero-block-title:before { bottom: -280px; left: -220px; -webkit-transition: opacity 1s, -webkit-transform 5s; -moz-transition: opacity 1s, -moz-transform 5s; -o-transition: opacity 1s, -o-transform 5s; transition: opacity 1s, transform 5s; }
   .hero .hero-block-title:after { bottom: -200px; left: 70px; -webkit-transition: opacity 1s, -webkit-transform 1s; -moz-transition: opacity 1s, -moz-transform 1s; -o-transition: opacity 1s, -o-transform 1s; transition: opacity 1s, transform 1s; }
   .hero .hero-block-title .title { position: relative; bottom: -72px; font-size: 24px; line-height: 30px; margin-bottom: 6px; -webkit-transition: bottom 0.5s; -moz-transition: bottom 0.5s; -o-transition: bottom 0.5s; transition: bottom 0.5s; }
@@ -621,7 +624,7 @@ body { background-color: #183840; position: relative; }
   .hero .hero-block.no-description:hover .hero-block-title .title { bottom: -72px; }
   .hero .hero-block.no-description:hover .hero-block-title .description { bottom: -72px; opacity: 1; }
   .hero .video-bg { display: block; position: absolute; top: 50%; left: 50%; min-width: 100%; min-height: 100%; width: auto; height: auto; background-color: black; -webkit-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); } }
-@media (min-width: 1440px) { .hero .hero-block-title .title { font-size: 28px; line-height: 36px; } }
+@media (min-width: 1280px) { .hero .hero-block-title .title { font-size: 28px; line-height: 36px; } }
 
 .post-list .post-list-title { margin: 36px 0; font-size: 24px; line-height: 30px; color: black; text-align: center; }
 .post-list .post-image { position: relative; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background-position: center center; background-repeat: no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; margin: 0 -24px 12px; width: auto; padding-top: 67%; background-color: #e1e1e1; background-image: -webkit-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -moz-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: -o-linear-gradient(140deg, #e7e879 0%, #50b584 87%); background-image: linear-gradient(140deg, #e7e879 0%, #50b584 87%); }
@@ -1101,13 +1104,13 @@ body { background-color: #183840; position: relative; }
   .homepage .sticky { position: fixed; } }
 @media (min-width: 1512px) { .homepage .sticky .header-inner, .homepage .sticky .sub-menu-inner { width: 90%; } }
 
-.policies-page .main-title, .policies-page .main-sub-title, .policies-page .section-title, .policies-page .section-sub-title, .policies-page .section-class, .policies-page .blockquote-name span { font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif; font-style: normal; font-weight: 200; -webkit-transition: opacity 0.5s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s; transition: opacity 0.5s 0.5s; }
+.policies-page .main-title, .policies-page .main-sub-title, .policies-page .section-title, .policies-page .section-sub-title, .policies-page .section-class, .policies-page .blockquote-name span { font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif; font-style: normal; font-weight: 200; -webkit-transition: opacity 0.5s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s; transition: opacity 0.5s 0.5s; }
 .wf-loading .policies-page .main-title, .wf-loading .policies-page .main-sub-title, .wf-loading .policies-page .section-title, .wf-loading .policies-page .section-sub-title, .wf-loading .policies-page .section-class, .wf-loading .policies-page .blockquote-name span { opacity: 0; }
 .wf-active .policies-page .main-title, .wf-active .policies-page .main-sub-title, .wf-active .policies-page .section-title, .wf-active .policies-page .section-sub-title, .wf-active .policies-page .section-class, .wf-active .policies-page .blockquote-name span { opacity: 1; }
-.policies-page .small-title, .policies-page blockquote p { font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif; font-style: normal; font-weight: 400; -webkit-transition: opacity 0.5s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s; transition: opacity 0.5s 0.5s; }
+.policies-page .small-title, .policies-page blockquote p { font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif; font-style: normal; font-weight: 400; -webkit-transition: opacity 0.5s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s; transition: opacity 0.5s 0.5s; }
 .wf-loading .policies-page .small-title, .wf-loading .policies-page blockquote p { opacity: 0; }
 .wf-active .policies-page .small-title, .wf-active .policies-page blockquote p { opacity: 1; }
-.policies-page blockquote.bigtext p { font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif; font-style: normal; font-weight: 600; -webkit-transition: opacity 0.5s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s; transition: opacity 0.5s 0.5s; }
+.policies-page blockquote.bigtext p { font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", sans-serif; font-style: normal; font-weight: 600; -webkit-transition: opacity 0.5s; -webkit-transition-delay: 0.5s; -moz-transition: opacity 0.5s 0.5s; -o-transition: opacity 0.5s 0.5s; transition: opacity 0.5s 0.5s; }
 .wf-loading .policies-page blockquote.bigtext p { opacity: 0; }
 .wf-active .policies-page blockquote.bigtext p { opacity: 1; }
 .policies-page em, .policies-page strong { font-weight: bold; color: #3e946a; }
@@ -1348,4 +1351,4 @@ body { background-color: #183840; position: relative; }
 
 @media (min-width: 640px) { br.word-break-on-phone { display: none; } }
 
-.word-no-break { display: inline-block; }
+.word-no-break { display: inline-block; white-space: nowrap; }
